# cjson-rs

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  LICENSE  METHODOLOGY.md  README.md  SECURITY.md
.github/workflows/: ci.yml
cjson-rs/: Cargo.toml
cjson-rs-ffi/: Cargo.toml
cjson-rs-ffi/fuzz/: Cargo.toml
cjson-rs-ffi/fuzz/fuzz_targets/: fuzz_ffi_roundtrip.rs  fuzz_parse.rs
cjson-rs-ffi/src/: alloc_hooks.rs  convert.rs  lib.rs  panic_guard.rs  types.rs
cjson-rs-ffi/tests/: ffi_smoke.rs
cjson-rs-ffi/tests/c/: cjson.h  run-c-smoke.sh  smoke.c
cjson-rs/src/: error.rs  lib.rs  parser.rs  serialiser.rs  token.rs  tokeniser.rs  value.rs
cjson-rs/tests/: parser_tests.rs  serialiser_tests.rs  tokeniser_tests.rs
conformance/: README.md  run-upstream-tests.sh
conformance/shim/: common.h
