[package]
name = "cjson-rs-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
cjson-rs-ffi = { path = ".." }
cjson-rs = { path = "../../cjson-rs" }

# Keep this out of the parent workspace.
[workspace]

[[bin]]
name = "fuzz_parse"
path = "fuzz_targets/fuzz_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_ffi_roundtrip"
path = "fuzz_targets/fuzz_ffi_roundtrip.rs"
test = false
doc = false
bench = false
